Add airports, and adjust water and transport colours
This establishes better contrast between the two blues

--- a/sql/transit-points.sql.jinja2
+++ b/sql/transit-points.sql.jinja2
@@ -1,11 +1,15 @@
 SELECT
     ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-    amenity IS NOT DISTINCT FROM 'bus_station'
+    aeroway IS NOT DISTINCT FROM 'aerodrome'
+      OR amenity IS NOT DISTINCT FROM 'bus_station'
       OR tags @> 'public_transport=>station'
       OR railway IS NOT DISTINCT FROM 'station' AS station,
-    CASE 
+    CASE
+      WHEN aeroway = 'aerodrome' THEN 'airplane'
       WHEN railway = 'station' AND tags @> 'station=>subway'
         OR tags @> 'public_transport=>station, subway=>yes' THEN 'subway'
+      WHEN highway = 'tram_stop'
+        OR tags @> 'public_transport=>platform, tram=>yes'  THEN 'tram'
       WHEN highway = 'bus_stop'
         OR tags @> 'public_transport=>platform, bus=>yes'
         OR amenity = 'bus_station'
@@ -16,6 +20,7 @@ SELECT
         highway,
         railway,
         amenity,
+        aeroway,
         tags
       FROM planet_osm_point
       WHERE way && {{bbox}}
@@ -24,12 +29,17 @@ SELECT
           highway = 'bus_stop'
           OR tags @> 'public_transport=>platform, bus=>yes' OR
 {% endif %}
+{% if zoom >= 14 %}
+          highway = 'tram_stop'
+          OR tags @> 'public_transport=>platform, tram=>yes' OR
+{% endif %}
 {% if zoom >= 13 %}
           amenity = 'bus_station'
           OR tags @> 'public_transport=>station, bus=>yes' OR
 {% endif %}
           (railway = 'station' AND tags @> 'station=>subway')
-          OR tags @> 'public_transport=>station, subway=>yes' 
+          OR tags @> 'public_transport=>station, subway=>yes'
+          OR aeroway = 'aerodrome'
 )
     UNION ALL
     SELECT
@@ -37,15 +47,21 @@ SELECT
         highway,
         railway,
         amenity,
+        aeroway,
         tags  
       FROM planet_osm_polygon
       WHERE way && {{bbox}}
         AND (
+{% if zoom >= 14 %}
+          highway = 'tram_stop'
+          OR tags @> 'public_transport=>platform, tram=>yes' OR
+{% endif %}
 {% if zoom >= 13 %}
           amenity = 'bus_station'
           OR tags @> 'public_transport=>station, bus=>yes' OR
 {% endif %}
           (railway = 'station' AND tags @> 'station=>subway')
           OR tags @> 'public_transport=>station, subway=>yes'
+          OR aeroway = 'aerodrome'
         )
   ) AS transit
