--- a/sql/landuse.sql.jinja2
+++ b/sql/landuse.sql.jinja2
@@ -1,13 +1,16 @@
 WITH landuse AS (
 SELECT
     way,
-    CASE WHEN landuse IN ('residential', 'commercial', 'retail', 'industrial', 'education') THEN landuse
+    CASE
+      WHEN leisure = 'park' THEN 'park'
       WHEN amenity = 'school' THEN 'education'
+      WHEN landuse IN ('residential', 'commercial', 'retail', 'industrial', 'education') THEN landuse
     END as landuse
   FROM planet_osm_polygon
   WHERE way && {{bbox}}
     AND (landuse IN ('residential', 'commercial', 'retail', 'industrial')
-      OR amenity IN ('school'))
+      OR amenity IN ('school')
+      OR leisure IN ('park'))
 )
 SELECT
     ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
