--- a/sql/landuse.sql.jinja2
+++ b/sql/landuse.sql.jinja2
@@ -2,15 +2,13 @@ WITH landuse AS (
 SELECT
     way,
     CASE
-      WHEN leisure IN ('park', 'stadium') THEN 'park'
       WHEN amenity = 'school' THEN 'education'
       WHEN landuse IN ('residential', 'commercial', 'retail', 'industrial', 'education') THEN landuse
     END as landuse
   FROM planet_osm_polygon
   WHERE way && {{bbox}}
     AND (landuse IN ('residential', 'commercial', 'retail', 'industrial')
-      OR amenity IN ('school')
-      OR leisure IN ('park', 'stadium'))
+      OR amenity IN ('school'))
 )
 SELECT
     ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
