--- a/sql/leisure.sql.jinja2
+++ b/sql/leisure.sql.jinja2
@@ -1,10 +1,19 @@
-WITH parks AS (
+WITH leisure AS (
 SELECT
-    way
+    way,
+    leisure
   FROM planet_osm_polygon
   WHERE way && {{bbox}}
-    AND leisure IN ('park', 'stadium')
+    AND (
+{% if zoom <= 14 %}
+        leisure IN ('park', 'stadium')
+{% else %}
+        leisure IN ('park', 'stadium', 'playground')
+{% endif %}
+      )
 )
 SELECT
-    ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way
-  FROM parks
+    ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    leisure
+  FROM leisure
+  GROUP BY leisure
