--- a/sql/education-names.sql.jinja2
+++ b/sql/education-names.sql.jinja2
@@ -1,17 +1,17 @@
-WITH landuse AS (
+WITH education AS (
 SELECT
     (ST_MaximumInscribedCircle(way)).center AS way,
     name,
-    landuse,
+    amenity AS education,
     way_area
   FROM planet_osm_polygon
   WHERE way && {{bbox}}
-    AND landuse IN ('residential', 'commercial', 'retail', 'industrial')
+    AND amenity IN ('school')
     AND name IS NOT NULL
 )
 SELECT
     ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
-    landuse,
+    education,
     way_area
-  FROM landuse
+  FROM education
