--- a/sql/education-names.sql.jinja2
+++ b/sql/education-names.sql.jinja2
@@ -6,7 +6,7 @@ SELECT
     way_area
   FROM planet_osm_polygon
   WHERE way && {{bbox}}
-    AND amenity IN ('school')
+    AND amenity IN ('school', 'kindergarten', 'university', 'college')
     AND name IS NOT NULL
 )
 SELECT
