--- a/sql/education.sql.jinja2
+++ b/sql/education.sql.jinja2
@@ -4,7 +4,7 @@ SELECT
     amenity AS education
   FROM planet_osm_polygon
   WHERE way && {{bbox}}
-    AND amenity IN ('school')
+    AND amenity IN ('school', 'kindergarten', 'university', 'college')
 )
 SELECT
     ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
