--- a/sql/food.sql.jinja2
+++ b/sql/food.sql.jinja2
@@ -1,22 +1,6 @@
-WITH food AS (
-  SELECT
-      way,
-      name,
-      amenity
-    FROM planet_osm_point
-    WHERE way && {{bbox}}
-      AND amenity IN ('bar', 'biergarten', 'cafe', 'fast_food', 'food_court', 'ice_cream', 'pub', 'restaurant')
-  UNION ALL
-  SELECT
-      (ST_MaximumInscribedCircle(way)).center AS way,
-      name,
-      amenity
-    FROM planet_osm_point
-    WHERE way && {{bbox}}
-      AND amenity IN ('bar', 'biergarten', 'cafe', 'fast_food', 'food_court', 'ice_cream', 'pub', 'restaurant')
-)
 SELECT
-    ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(point, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
-    amenity AS food
+    food
   FROM food
+  WHERE point && {{bbox}}
