--- a/sql/admin-names.sql.jinja2
+++ b/sql/admin-names.sql.jinja2
@@ -1,18 +1,16 @@
 SELECT
-    ST_AsMVTGeom((ST_MaximumInscribedCircle(way)).center, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
     way_area
-  FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND (ST_MaximumInscribedCircle(way)).center && {{bbox}}
+  FROM admin
+  WHERE geom && {{bbox}}
     AND name IS NOT NULL
-    AND boundary = 'administrative'
     AND way_area > 0.25 * {{tile_area}}
 {% if zoom <= 5 %}
-  AND admin_level IN ('2')
+  AND admin_level IN (2)
 {% elif zoom <= 8 %}
-  AND admin_level IN ('2', '3', '4')
+  AND admin_level IN (2, 3, 4)
 {% else %}
-  AND admin_level IN ('2', '3', '4', '5', '6')
+  AND admin_level IN (2, 3, 4, 5, 6)
 {% endif %}
   ORDER BY admin_level ASC, way_area DESC
