--- a/sql/education-names.sql.jinja2
+++ b/sql/education-names.sql.jinja2
@@ -1,17 +1,7 @@
-WITH education AS (
 SELECT
-    (ST_MaximumInscribedCircle(way)).center AS way,
-    name,
-    amenity AS education,
-    way_area
-  FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND amenity IN ('school', 'kindergarten', 'university', 'college')
-    AND name IS NOT NULL
-)
-SELECT
-    ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(point, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
     education,
     way_area
   FROM education
+  WHERE point && {{bbox}} AND name IS NOT NULL
