--- a/sql/landuse.sql.jinja2
+++ b/sql/landuse.sql.jinja2
@@ -1,13 +1,6 @@
-WITH landuse AS (
 SELECT
-    way,
-    landuse
-  FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND landuse IN ('residential', 'commercial', 'retail', 'industrial')
-)
-SELECT
-    ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(ST_Collect(geom), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     landuse
   FROM landuse
+  WHERE geom && {{bbox}}
   GROUP BY landuse
