--- a/sql/leisure-names.sql.jinja2
+++ b/sql/leisure-names.sql.jinja2
@@ -1,15 +1,8 @@
-WITH parks AS (
 SELECT
-    (ST_MaximumInscribedCircle(way)).center AS way,
+    ST_AsMVTGeom(point, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
     way_area
-  FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND leisure IN ('park')
+  FROM leisure
+  WHERE point && {{bbox}}
     AND name IS NOT NULL
-)
-SELECT
-    ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-    name,
-    way_area
-  FROM parks
+    AND leisure = 'park'
