--- a/sql/leisure.sql.jinja2
+++ b/sql/leisure.sql.jinja2
@@ -1,19 +1,13 @@
-WITH leisure AS (
 SELECT
-    way,
-    leisure
-  FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND (
-{% if zoom <= 14 %}
-        leisure IN ('park', 'stadium')
-{% else %}
-        leisure IN ('park', 'stadium', 'playground')
-{% endif %}
-      )
-)
-SELECT
-    ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(ST_Collect(geom), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     leisure
   FROM leisure
+  WHERE geom && {{bbox}}
+  AND (
+{% if zoom <= 14 %}
+    leisure IN ('park', 'stadium')
+{% else %}
+    leisure IN ('park', 'stadium', 'playground')
+{% endif %}
+  )
   GROUP BY leisure
