--- a/sql/roads-high.sql.jinja2
+++ b/sql/roads-high.sql.jinja2
@@ -1,10 +1,9 @@
 WITH all_roads AS (
 SELECT
-    CASE WHEN oneway = '-1' THEN ST_Reverse(way) ELSE way END AS way,
-    osm_id,
+    CASE WHEN oneway = '-1' THEN ST_Reverse(geom) ELSE geom END AS geom,
     name,
     ref,
-    CASE -- normalize highway values, and also filter out any odd highway tags from railways
+    CASE -- normalize highway values
       WHEN highway IN ('motorway', 'motorway_link') THEN 'motorway'
       WHEN highway IN ('trunk', 'trunk_link') THEN 'trunk'
       WHEN highway IN ('primary', 'primary_link') THEN 'primary'
@@ -13,21 +12,21 @@ SELECT
       WHEN highway IN ('unclassified', 'residential', 'living_street', 'service', 'bridleway', 'footway', 'cycleway', 'path') THEN highway
       END as highway,
     CASE WHEN highway IN ('motorway_link', 'trunk_link', 'primary_link', 'secondary_link', 'tertiary_link') THEN true END AS link,
-    service IN ('parking_aisle', 'drive-through', 'driveway') AS minor,
+    minor,
     CASE
       WHEN oneway = '-1' THEN 'yes'
       WHEN oneway = 'no' THEN NULL
       ELSE oneway END AS oneway,
-    tunnel IS NOT NULL and tunnel != 'no' AS tunnel,
-    bridge IS NOT NULL and bridge != 'no' AS bridge,
+    tunnel,
+    bridge,
     layer,
-    (SELECT ref FROM planet_osm_route
-      WHERE route = 'road' AND planet_osm_transport_line.osm_id = planet_osm_route.member_id
-      ORDER BY cardinality(string_to_array(network, ':')) ASC, char_length(network) ASC, network, planet_osm_route.osm_id
+    (SELECT ref FROM road_routes
+      WHERE roads.way_id = road_routes.member_id
+      ORDER BY cardinality(string_to_array(network, ':')) ASC, char_length(network) ASC, network, road_routes.relation_id
       LIMIT 1) AS route_ref,
     z_order
-  FROM planet_osm_transport_line
-  WHERE way && {{bbox}}
+  FROM roads
+  WHERE geom && {{bbox}}
 {% if zoom <= 10 %}
     AND highway IN ('motorway', 'motorway_link', 'trunk', 'trunk_link', 'primary', 'primary_link',
                     'secondary', 'secondary_link', 'tertiary', 'tertiary_link')
@@ -42,7 +41,7 @@ SELECT
 {% endif %}
 ), reffed_roads AS (
 SELECT
-    way,
+    geom,
 {# Omitting name and ref from small roads allows for better merging and smaller tiles #}
 {% if zoom <= 11 %}
     CASE WHEN highway IN ('motorway', 'trunk', 'primary', 'secondary') THEN name END AS name,
@@ -65,7 +64,7 @@ SELECT
   FROM all_roads
 ), oneway_roads AS (
 SELECT
-    way, -- linemerge with geos 3.11+
+    geom, -- linemerge with geos 3.11+ when we require it
     name,
     highway,
     link,
@@ -80,7 +79,7 @@ SELECT
   WHERE oneway = 'yes'
 ), other_roads AS (
 SELECT
-    ST_LineMerge(ST_Collect(way)) AS way,
+    ST_LineMerge(ST_Collect(geom)) AS geom,
     name,
     highway,
     link,
@@ -96,15 +95,15 @@ SELECT
   GROUP BY name, highway, link, minor, ref, oneway, tunnel, bridge, layer, z_order
 ), grouped_roads AS (
 SELECT
-    way, name, highway, link, minor, ref, oneway, tunnel, bridge, layer, z_order
+    geom, name, highway, link, minor, ref, oneway, tunnel, bridge, layer, z_order
   FROM oneway_roads
 UNION ALL
 SELECT
-    (ST_Dump(way)).geom AS way, name, highway, link, minor, ref, oneway, tunnel, bridge, layer, z_order
+    (ST_Dump(geom)).geom AS way, name, highway, link, minor, ref, oneway, tunnel, bridge, layer, z_order
   FROM other_roads
 )
 SELECT
-    ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name, highway, link, minor, ref, oneway, tunnel, bridge, layer, z_order
 FROM grouped_roads
 ORDER BY z_order
