--- a/sql/vegetation-names.sql.jinja2
+++ b/sql/vegetation-names.sql.jinja2
@@ -1,35 +1,8 @@
-WITH vegetation AS (
 SELECT
-    (ST_MaximumInscribedCircle(way)).center AS way,
-    name,
-    CASE
-    WHEN "natural" IN ('wood', 'heath', 'scrub', 'wetland') THEN "natural"
-    WHEN "natural" = 'grassland' OR landuse IN ('meadow', 'grass') THEN 'grass'
-    WHEN "natural" = 'mud' THEN 'wetland'
-    WHEN landuse = 'forest' THEN 'wood'
-    END AS vegetation,
-    CASE
-      WHEN "natural" = 'mud' THEN 'mud'
-      WHEN "natural" = 'wetland' THEN
-        CASE tags->'wetland'
-          WHEN 'bog' THEN 'bog'
-          WHEN 'swamp' THEN 'swamp'
-          WHEN 'marsh' THEN 'marsh'
-          ELSE tags->'wetland'
-        END
-      END
-    AS wetland,
-    way_area
-    FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND ("natural" IN ('wood', 'heath', 'grassland', 'scrub', 'wetland', 'mud')
-      OR landuse IN ('forest', 'meadow', 'grass'))
-    AND name IS NOT NULL
-)
-SELECT
-    ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
     vegetation,
     wetland,
     way_area
   FROM vegetation
+  WHERE point && {{bbox}}
