--- a/sql/water-lines.sql.jinja2
+++ b/sql/water-lines.sql.jinja2
@@ -1,9 +1,9 @@
 SELECT
-    ST_AsMVTGeom(ST_RemoveRepeatedPoints(ST_LineMerge(ST_Collect(way)),  4*{{coordinate_length}}), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(ST_RemoveRepeatedPoints(ST_LineMerge(ST_Collect(geom)),  4*{{coordinate_length}}), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     name,
     waterway
-  FROM planet_osm_line
-  WHERE way && {{bbox}}
+  FROM waterways
+  WHERE geom && {{bbox}}
 {% if zoom <= 10 %}
     AND waterway = 'river'
 {% elif zoom <= 12 %}
