--- a/sql/water.sql.jinja2
+++ b/sql/water.sql.jinja2
@@ -8,10 +8,7 @@ SELECT
   WHERE way && {{bbox}}
 UNION ALL
 SELECT
-    ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way
-  FROM planet_osm_polygon
-  WHERE way && {{bbox}}
-    AND (waterway IN ('dock', 'riverbank')
-        OR landuse IN ('reservoir', 'basin')
-        OR "natural" IN ('water'))
+    ST_AsMVTGeom(ST_Collect(geom), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way
+  FROM water
+  WHERE geom && {{bbox}}
     AND way_area > 16 * {{coordinate_area}}
