shortbread: Reformat SQL files
Change the SQL from one-line machine-generated files to a
standard formatting that is more readable.

--- a/shortbread_original/boundaries.02-14.sql.jinja2
+++ b/shortbread_original/boundaries.02-14.sql.jinja2
@@ -1,1 +1,10 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"name","name_de","name_en","admin_level","maritime","disputed" FROM "boundaries" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        name,
+        name_de,
+        name_en,
+        admin_level,
+        maritime,
+        disputed
+    FROM boundaries
+    WHERE geom && {{bbox}}
