--- a/shortbread_original/addresses.14-14.sql.jinja2
+++ b/shortbread_original/addresses.14-14.sql.jinja2
@@ -1,1 +1,6 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"housename","housenumber" FROM "addresses" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        housename,
+        housenumber
+    FROM addresses
+    WHERE geom && {{bbox}}
