--- a/shortbread_original/aerialways.12-14.sql.jinja2
+++ b/shortbread_original/aerialways.12-14.sql.jinja2
@@ -1,1 +1,5 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"kind" FROM "aerialways" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        kind
+    FROM aerialways
+    WHERE geom && {{bbox}}
