--- a/shortbread_original/boundary_labels.00-14.sql.jinja2
+++ b/shortbread_original/boundary_labels.00-14.sql.jinja2
@@ -1,1 +1,10 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"name","name_de","name_en","admin_level","way_area" FROM "boundary_labels" WHERE "geom" && {{bbox}} AND {{zoom}} >= "minzoom"
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        name,
+        name_de,
+        name_en,
+        admin_level,
+        way_area
+    FROM boundary_labels
+    WHERE geom && {{bbox}}
+        AND {{zoom}} >= minzoom
