--- a/shortbread_original/buildings.14-14.sql.jinja2
+++ b/shortbread_original/buildings.14-14.sql.jinja2
@@ -1,1 +1,4 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way FROM "buildings" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way
+    FROM buildings
+    WHERE geom && {{bbox}}
