--- a/shortbread_original/dam_lines.14-14.sql.jinja2
+++ b/shortbread_original/dam_lines.14-14.sql.jinja2
@@ -1,1 +1,5 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"kind" FROM "dam_lines" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        kind
+    FROM dam_lines
+    WHERE geom && {{bbox}}
