--- a/shortbread_original/ferries.10-14.sql.jinja2
+++ b/shortbread_original/ferries.10-14.sql.jinja2
@@ -1,1 +1,10 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"name","name_de","name_en","kind","motor_vehicle" FROM "ferries" WHERE "geom" && {{bbox}} AND {{zoom}} >= "minzoom"
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        name,
+        name_de,
+        name_en,
+        kind,
+        motor_vehicle
+    FROM ferries
+    WHERE geom && {{bbox}}
+        AND {{zoom}} >= minzoom
