--- a/shortbread_original/land.07-14.sql.jinja2
+++ b/shortbread_original/land.07-14.sql.jinja2
@@ -1,1 +1,6 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"kind" FROM "land" WHERE "geom" && {{bbox}} AND {{zoom}} >= "minzoom"
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        kind
+    FROM land
+    WHERE geom && {{bbox}}
+        AND {{zoom}} >= minzoom
