--- a/shortbread_original/sites.14-14.sql.jinja2
+++ b/shortbread_original/sites.14-14.sql.jinja2
@@ -1,1 +1,8 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"name","name_de","name_en","kind" FROM "sites" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        name,
+        name_de,
+        name_en,
+        kind
+    FROM sites
+    WHERE geom && {{bbox}}
