--- a/shortbread_original/streets.11-13.sql.jinja2
+++ b/shortbread_original/streets.11-13.sql.jinja2
@@ -1,1 +1,22 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"name","name_de","name_en","kind","link","rail","tunnel","bridge","tracktype","surface","service","layer","ref","ref_rows","ref_cols","z_order" FROM "streets_med" WHERE "geom" && {{bbox}} AND {{zoom}} >= "minzoom" ORDER BY "z_order" asc
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        name,
+        name_de,
+        name_en,
+        kind,
+        link,
+        rail,
+        tunnel,
+        bridge,
+        tracktype,
+        surface,
+        service,
+        layer,
+        ref,
+        ref_rows,
+        ref_cols,
+        z_order
+    FROM streets_med
+    WHERE geom && {{bbox}}
+        AND {{zoom}} >= minzoom
+    ORDER BY z_order asc
