--- a/shortbread_original/streets_labels_points.12-14.sql.jinja2
+++ b/shortbread_original/streets_labels_points.12-14.sql.jinja2
@@ -1,1 +1,9 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"name","name_de","name_en","kind","ref" FROM "streets_labels_points" WHERE "geom" && {{bbox}}
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        name,
+        name_de,
+        name_en,
+        kind,
+        ref
+    FROM streets_labels_points
+    WHERE geom && {{bbox}}
