--- a/shortbread_original/water_lines.09-14.sql.jinja2
+++ b/shortbread_original/water_lines.09-14.sql.jinja2
@@ -1,1 +1,10 @@
-SELECT ST_AsMVTGeom("geom", {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,"kind","tunnel","bridge","layer" FROM "water_lines" WHERE "geom" && {{bbox}} AND {{zoom}} >= "minzoom" ORDER BY "layer" asc
+SELECT
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        kind,
+        tunnel,
+        bridge,
+        layer
+    FROM water_lines
+    WHERE geom && {{bbox}}
+        AND {{zoom}} >= minzoom
+    ORDER BY layer ASC
