--- a/shortbread/dam_polygons.sql.jinja2
+++ b/shortbread/dam_polygons.sql.jinja2
@@ -1,5 +1,5 @@
 SELECT
         ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        kind,
-        way_area
-    FROM water_areas WHERE geom && {{bbox}}
+        kind
+    FROM dam_polygons
+    WHERE geom && {{bbox}}
