Move to local copy of addresses and POIs
https://github.com/osm2pgsql-dev/osm2pgsql-themepark/pull/13 has
various changes to the upstream layers, but until this is merged
we need to keep a local copy of the Lua with the updated files.

--- a/shortbread_original/ferries.10-14.sql.jinja2
+++ b/shortbread_original/ferries.10-14.sql.jinja2
@@ -3,8 +3,7 @@ SELECT
         name,
         name_de,
         name_en,
-        kind,
-        motor_vehicle
+        kind
     FROM ferries
     WHERE geom && {{bbox}}
         AND {{zoom}} >= minzoom
