--- a/shortbread/street_labels.sql.jinja2
+++ b/shortbread/street_labels.sql.jinja2
@@ -74,7 +74,7 @@ merged AS (
     GROUP BY {{columns}}, z_order
 )
 SELECT
-    ST_AsMVTGeom((ST_Dump(geom)).geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(ST_Simplify((ST_Dump(geom)).geom, {{ coordinate_length }}), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     kind,
     name,
     array_to_string(refs, E'\n') AS ref,
