--- a/shortbread/streets.sql.jinja2
+++ b/shortbread/streets.sql.jinja2
@@ -110,7 +110,7 @@ merged AS (
     GROUP BY {{columns}}, z_order
 )
 SELECT
-    ST_AsMVTGeom((ST_Dump(geom)).geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+    ST_AsMVTGeom(ST_Simplify((ST_Dump(geom)).geom, {{ coordinate_length }}), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
     {{columns}}
     FROM merged
     ORDER BY z_order DESC
