Fix missing way_area column

--- a/shortbread/streets_polygons_labels.sql.jinja2
+++ b/shortbread/streets_polygons_labels.sql.jinja2
@@ -5,4 +5,4 @@ SELECT
         name_en,
         kind
     FROM streets_polygons_labels
-    WHERE geom && {{bbox}} ORDER BY way_area desc
+    WHERE geom && {{bbox}}
