--- a/shortbread/land.sql.jinja2
+++ b/shortbread/land.sql.jinja2
@@ -1,7 +1,8 @@
 SELECT
         ST_AsMVTGeom(ST_Simplify(ST_Collect(geom), {{ coordinate_length }}), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
         kind
-    FROM water_areas
+    FROM land
     WHERE geom && {{bbox}}
+        AND {{zoom}} >= minzoom
         AND ST_Area(geom) > 4*{{ coordinate_area }}
     GROUP BY kind
