--- a/shortbread/ocean.sql.jinja2
+++ b/shortbread/ocean.sql.jinja2
@@ -1,5 +1,5 @@
 SELECT
-    ST_AsMVTGeom(way, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way
+    ST_AsMVTGeom(ST_Collect(way), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way
 {% if zoom <= 8 %}
   FROM simplified_water_polygons
 {% else %}
