--- a/shortbread/water_polygons.sql.jinja2
+++ b/shortbread/water_polygons.sql.jinja2
@@ -1,5 +1,5 @@
 SELECT
-        ST_AsMVTGeom(ST_Collect(geom)), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        ST_AsMVTGeom(ST_Collect(geom), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
         kind
     FROM water_areas
     WHERE geom && {{bbox}}
