Add way_area to water_polygons
Fixes #52

--- a/shortbread/water_polygons.sql.jinja2
+++ b/shortbread/water_polygons.sql.jinja2
@@ -1,7 +1,7 @@
 SELECT
-        ST_AsMVTGeom(ST_Collect(geom), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        kind
+        ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
+        kind,
+        way_area
     FROM water_areas
     WHERE geom && {{bbox}}
         AND ST_Area(geom) > 4*{{ coordinate_area }}
-    GROUP BY kind
