shortbread: fix name of street_labels_points layer
Fixes #60

--- a/shortbread/street_labels_points.sql.jinja2
+++ b/shortbread/street_labels_points.sql.jinja2
@@ -5,5 +5,5 @@ SELECT
         name_en,
         kind,
         ref
-    FROM streets_labels_points
+    FROM street_labels_points
     WHERE geom && {{bbox}}
