shortbread: add service to railways
Fixes #59

--- a/shortbread/streets.sql.jinja2
+++ b/shortbread/streets.sql.jinja2
@@ -50,7 +50,7 @@ rail AS (
         false AS oneway,
         false AS oneway_reverse,
         NULL as tracktype,
-        NULL AS service,
+        service,
         NULL AS bicycle,
         NULL AS horse,
         z_order
